--- a/Checkers/Checkers/ViewControllers/Loading/LoadingViewController.storyboard
+++ b/Checkers/Checkers/ViewControllers/Loading/LoadingViewController.storyboard
@@ -19,8 +19,8 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="13" translatesAutoresizingMaskIntoConstraints="NO" id="Bel-2J-D5N">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CHECKERS" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZDh-wE-nRE" customClass="LTMorphingLabel" customModule="LTMorphingLabel">
-                                <rect key="frame" x="104" y="153" width="206.5" height="52"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZDh-wE-nRE" customClass="LTMorphingLabel" customModule="LTMorphingLabel">
+                                <rect key="frame" x="207" y="179" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="40"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -66,6 +66,9 @@
             <point key="canvasLocation" x="28.985507246376812" y="70.982142857142847"/>
         </scene>
     </scenes>
+    <designables>
+        <designable name="ZDh-wE-nRE"/>
+    </designables>
     <resources>
         <image name="13" width="1023" height="683"/>
         <systemColor name="systemBackgroundColor">
