--- a/Checkers/Checkers/ViewControllers/Score/ScoreViewController.storyboard
+++ b/Checkers/Checkers/ViewControllers/Score/ScoreViewController.storyboard
@@ -37,24 +37,55 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Jc-J6-BK2">
+                                <rect key="frame" x="305" y="88" width="94" height="40"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Zj1-QO-sVm"/>
+                                    <constraint firstAttribute="width" constant="94" id="f6V-Ul-rKa"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0gG-dO-uUm">
+                                <rect key="frame" x="305" y="88" width="94" height="40"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="94" id="O0i-Tc-NGe"/>
+                                    <constraint firstAttribute="height" constant="40" id="PVd-Pz-Y63"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button">
+                                    <color key="baseForegroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="deleteButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Iiu-J0-eRM"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="iwu-Tl-no8" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" id="1QW-6I-adj"/>
                             <constraint firstItem="iwu-Tl-no8" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="3GR-AV-kyp"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="0gG-dO-uUm" secondAttribute="trailing" constant="15" id="8jY-ZQ-bGe"/>
                             <constraint firstAttribute="bottom" secondItem="iwu-Tl-no8" secondAttribute="bottom" id="CTH-J5-KP6"/>
                             <constraint firstItem="Ryf-6b-krU" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="MDt-XI-irV"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="8Jc-J6-BK2" secondAttribute="trailing" constant="15" id="PgU-xv-oGt"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="Ryf-6b-krU" secondAttribute="bottom" id="QqW-rC-Nfk"/>
+                            <constraint firstItem="0gG-dO-uUm" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="SGp-tm-mQV"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Ryf-6b-krU" secondAttribute="trailing" id="XjT-rY-r5V"/>
+                            <constraint firstItem="8Jc-J6-BK2" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="Zcm-1j-RQd"/>
                             <constraint firstItem="xpU-9b-P2L" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="10" id="fC1-m5-hdq"/>
                             <constraint firstItem="iwu-Tl-no8" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="fm9-SG-yzH"/>
                             <constraint firstItem="xpU-9b-P2L" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="iHZ-fM-eKJ"/>
+                            <constraint firstItem="Ryf-6b-krU" firstAttribute="top" secondItem="8Jc-J6-BK2" secondAttribute="bottom" id="t7n-8q-Gyc"/>
+                            <constraint firstItem="Ryf-6b-krU" firstAttribute="top" secondItem="0gG-dO-uUm" secondAttribute="bottom" id="ukV-Gu-ZK3"/>
                             <constraint firstItem="Ryf-6b-krU" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="40" id="w98-0F-cRd"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="xdd-vz-135"/>
                     <connections>
+                        <outlet property="deleteButton" destination="0gG-dO-uUm" id="JVC-XW-v2S"/>
+                        <outlet property="lottieView" destination="8Jc-J6-BK2" id="5Ky-qI-h4k"/>
                         <outlet property="tableView" destination="Ryf-6b-krU" id="T5m-8y-jIo"/>
                     </connections>
                 </viewController>
