--- a/Checkers/Checkers/Views/StartButton/StartButtonView.xib
+++ b/Checkers/Checkers/Views/StartButton/StartButtonView.xib
@@ -24,8 +24,8 @@
                         <constraint firstAttribute="width" constant="40" id="NpX-al-6RW"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="START" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BKN-Bx-wF9">
-                    <rect key="frame" x="136" y="22" width="65" height="26.5"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BKN-Bx-wF9">
+                    <rect key="frame" x="201" y="35" width="0.0" height="0.0"/>
                     <fontDescription key="fontDescription" type="system" pointSize="22"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
