--- a/Checkers/Checkers/ViewControllers/MainMenu/MainMenuViewController.storyboard
+++ b/Checkers/Checkers/ViewControllers/MainMenu/MainMenuViewController.storyboard
@@ -22,6 +22,13 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="13" translatesAutoresizingMaskIntoConstraints="NO" id="whR-eT-mif">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkers" translatesAutoresizingMaskIntoConstraints="NO" id="zqA-Wi-f7d">
+                                <rect key="frame" x="172" y="647" width="70" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="70" id="FnZ-B2-Jw8"/>
+                                    <constraint firstAttribute="height" constant="50" id="kZ1-iP-32y"/>
+                                </constraints>
+                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fSg-gB-FU7">
                                 <rect key="frame" x="102" y="437" width="210" height="70"/>
                                 <constraints>
@@ -129,6 +136,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="ek4-6r-AaL" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="9O7-Xk-aLk"/>
+                            <constraint firstItem="zqA-Wi-f7d" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="EPb-cn-WEs"/>
                             <constraint firstItem="ek4-6r-AaL" firstAttribute="top" secondItem="AdH-hy-Lfj" secondAttribute="bottom" constant="30" id="Heb-yN-F0b"/>
                             <constraint firstItem="whR-eT-mif" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leading" id="LSt-pY-pBW"/>
                             <constraint firstItem="Un4-bl-7oZ" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="RSt-Fu-ElD"/>
@@ -139,6 +147,7 @@
                             <constraint firstItem="whR-eT-mif" firstAttribute="trailing" secondItem="5EZ-qb-Rvc" secondAttribute="trailing" id="nyL-j4-LQf"/>
                             <constraint firstItem="fSg-gB-FU7" firstAttribute="top" secondItem="Un4-bl-7oZ" secondAttribute="bottom" constant="30" id="pCY-eg-115"/>
                             <constraint firstItem="fSg-gB-FU7" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="rQd-9S-G7H"/>
+                            <constraint firstItem="zqA-Wi-f7d" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" multiplier="1.5" id="szH-SQ-a8Q"/>
                             <constraint firstItem="ek4-6r-AaL" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" multiplier="1.5" id="vvN-xM-s0Z"/>
                         </constraints>
                     </view>
@@ -147,6 +156,7 @@
                         <outlet property="buttonAbout" destination="Un4-bl-7oZ" id="Nvq-oe-ALu"/>
                         <outlet property="buttonScore" destination="AdH-hy-Lfj" id="i5b-xh-c4P"/>
                         <outlet property="buttonSettings" destination="fSg-gB-FU7" id="bI8-93-u7j"/>
+                        <outlet property="imageView" destination="zqA-Wi-f7d" id="je7-YR-W5C"/>
                         <outlet property="startButtonView" destination="ek4-6r-AaL" id="vWc-Fc-5iD"/>
                     </connections>
                 </viewController>
@@ -180,6 +190,7 @@
     </scenes>
     <resources>
         <image name="13" width="1023" height="683"/>
+        <image name="checkers" width="568" height="210"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
