--- a/Checkers/Checkers/Views/StartButton/StartButtonView.xib
+++ b/Checkers/Checkers/Views/StartButton/StartButtonView.xib
@@ -18,10 +18,10 @@
             <rect key="frame" x="0.0" y="0.0" width="210" height="70"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="startButton" translatesAutoresizingMaskIntoConstraints="NO" id="WFs-Jd-mUP">
-                    <rect key="frame" x="10" y="10" width="40" height="50"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkers" translatesAutoresizingMaskIntoConstraints="NO" id="WFs-Jd-mUP">
+                    <rect key="frame" x="10" y="10" width="80" height="50"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="40" id="NpX-al-6RW"/>
+                        <constraint firstAttribute="width" constant="80" id="NpX-al-6RW"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BKN-Bx-wF9">
@@ -50,6 +50,6 @@
         </view>
     </objects>
     <resources>
-        <image name="startButton" width="1600" height="1600"/>
+        <image name="checkers" width="568" height="210"/>
     </resources>
 </document>
